[project]
name = "youtube-addiction-controller"
version = "0.1.0"
description = "OpenEnv environment for controlling YouTube addiction"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["."]